# workpot

./: .gitignore  .prettierignore  .stylelintignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  SETTINGS.md  deny.toml  eslint.config.js  hk.pkl  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  stylelint.config.js  tsconfig.json  vite-esbuild-target.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/actions/npm-ci/: action.yml
.github/actions/pnpm-install/: action.yml
.github/actions/rust-cache/: action.yml
.github/ci-assist/: .release-please-manifest.json  deny.toml  release-please-config.json  sonar-project.properties
.github/eslint-sarif/: sarif.cjs
.github/rulesets/: ci.json  workpot.json
.github/workflows/: ci.yml  release-artifacts.yml  release-please.yml  release-publish.yml  release-smoke.yml  release.yml  semantic-pr.yml  sonar.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-persistence/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-SECURITY.md  01-SKELETON.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-repo-discovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-git-state/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-SECURITY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-tray-finder-mvp/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-REVIEWS.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md
.planning/phases/05-tags-prioritization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-08-PLAN.md  05-08-SUMMARY.md  05-09-PLAN.md  05-09-SUMMARY.md  05-ADD-TESTS-WAVE1.md  05-ADD-TESTS-WAVE2.md  05-ADD-TESTS-WAVE3.md  05-ADD-TESTS-WAVE4.md  05-ADD-TESTS-WAVE5.md  05-ADD-TESTS-WAVE6.md  05-ADD-TESTS-WAVE7.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  (+22 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.sonarlint/: connectedMode.json
.storybook/: main.ts  preview-head.html  preview.ts  storybook-aliases.ts
crates/workpot-cli/: CHANGELOG.md  Cargo.toml
crates/workpot-cli/src/: git_display.rs  list_display.rs  main.rs  update.rs
crates/workpot-cli/tests/: cli_smoke.rs  distribution_contract.rs  update_smoke.rs
crates/workpot-core/: CHANGELOG.md  Cargo.toml  clippy.toml
crates/workpot-core/src/: error.rs  lib.rs  testing.rs
crates/workpot-core/src/domain/: config.rs  git_state.rs  mod.rs  repo.rs
crates/workpot-core/src/infra/: config_doc.rs  db.rs  git.rs  migrations.rs  mod.rs  paths.rs  settings.template.toml  store.rs
crates/workpot-core/src/infra/migrations/: 001_init.sql  002_discovery.sql  003_git_state.sql  004_repos_source_index.sql  005_tray.sql  006_org.sql  007_alias.sql  008_convert_preflight.sql  009_repo_hidden_branches.sql
crates/workpot-core/src/services/: branch_checkout.rs  catalog.rs  discovery.rs  excludes.rs  git_state.rs  index.rs  launch.rs  mod.rs  org.rs  paths.rs  repo_convert.rs  repo_fuzzy.rs  repo_priority.rs  repo_sync.rs  roots.rs  stale_dirty.rs  sync_cmd.rs
crates/workpot-core/tests/: alias_migration_test.rs  app_context_facade_test.rs  bootstrap_test.rs  branch_checkout_test.rs  catalog_test.rs  config_doc_test.rs  config_init_test.rs  data02_script_test.rs  db_pool_test.rs  discovery_test.rs  error_test.rs  excludes_test.rs  git_state_perf_test.rs  git_state_test.rs  index_concurrency_test.rs  index_test.rs  launch_test.rs  org_test.rs  paths_test.rs  repo_convert_test.rs  repo_fuzzy_test.rs  repo_priority_test.rs  repo_record_test.rs  repo_sync_test.rs  roots_test.rs  stale_dirty_test.rs  tray_migration_test.rs  tray_refresh_test.rs
crates/workpot-core/tests/common/: mod.rs
docs/: distribution-strategy.md  releasing.md
docs/agent-guides/: code-quality.rust.md
docs/homebrew-tap-files/: README.md
scripts/: check-no-network-deps.sh  check-release-pr.sh  coverage-exclusions.mjs  gh-pr-error.sh  install.sh  latest-released-version.sh  read-workspace-version.sh  sync-version.sh  vite-build.mjs
scripts/tests/: install_smoke.sh
src/: app.css  app.html
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json  trayCommandsCapability.test.ts
src-tauri/capabilities/: default.json
src-tauri/permissions/: tray-commands.toml
src-tauri/src/: commands.rs  launch.rs  lib.rs  main.rs  tray.rs
src/lib/: branchStatus.test.ts  branchStatus.ts  detailRepoSync.test.ts  detailRepoSync.ts  filterNavigation.test.ts  fuzzy.test.ts  fuzzy.ts  gitRefresh.test.ts  gitRefresh.ts  listState.test.ts  listState.ts  openSelection.test.ts  openSelection.ts  orgClient.test.ts  orgClient.ts  panelLayout.test.ts  panelLayout.ts  pinOrder.test.ts  pinOrder.ts  repoRow.test.ts  repoRow.ts  sort.test.ts  sort.ts  tagAutocomplete.test.ts  tagAutocomplete.ts  tagChip.test.ts  tagChip.ts  tagFilter.test.ts  tagFilter.ts  trayKeyboard.test.ts  trayKeyboard.ts  trayList.test.ts  trayList.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+285 files in other folders)
