[workspace]
members = ["crates/workpot-core", "crates/workpot-cli", "src-tauri"]
default-members = ["crates/workpot-core", "crates/workpot-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.0.1"
license = "Unlicense"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
