[package]
name = "workpot-tray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workpot macOS menu bar tray"

[lib]
name = "workpot_tray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "workpot-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = { workspace = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
workpot-core = { path = "../crates/workpot-core", version = "0.0.1" }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[dev-dependencies]
tempfile = "3"
workpot-core = { path = "../crates/workpot-core", version = "0.0.1" }
