[package]
name = "workpot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "workpot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11"
humantime = "2"
workpot-core = { path = "../workpot-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
