[package]
name = "workpot-cli"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "workpot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
humantime = "2.3"
workpot-core = { path = "../workpot-core", version = "0.1.0" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
