[package]
name = "workpot-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "workpot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
humantime = "2.3"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3"
workpot-core = { path = "../workpot-core", version = "0.0.1" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
