[package]
name = "workpot-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
directories = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
ignore = "0.4.25"
globset = "0.4.18"
git2 = { version = "0.21", features = ["vendored-libgit2"] }
log = "0.4"
rayon = "1"

[dev-dependencies]
tempfile = "3"
