[package]
name = "workpot-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
directories = { workspace = true }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = { version = "1", features = ["serde", "display"] }
ignore = "0.4.25"
globset = "0.4.18"
git2 = { version = "0.21", features = ["vendored-libgit2"] }
log = "0.4"
rayon = "1"

[dev-dependencies]
tempfile = "3"
